--- a/package.json
+++ b/package.json
@@ -68,11 +68,25 @@
     "qunit": "^2.19.4",
     "qunit-dom": "^2.0.0",
     "stylelint": "^15.4.0",
+    "stylelint-config-recommended": "^13.0.0",
     "stylelint-config-standard": "^32.0.0",
     "stylelint-prettier": "^3.0.0",
     "tailwindcss": "^3.3.2",
     "tracked-built-ins": "^3.1.1",
     "webpack": "^5.78.0"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "jsxSingleQuote": true,
+    "semi": false,
+    "tabWidth": 2,
+    "useTabs": false
+  },
+  "eslintConfig": {
+    "extends": [
+      "eslint:recommended",
+      "prettier"
+    ]
   },
   "engines": {
     "node": "14.* || 16.* || >= 18"
