--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@embroider/webpack": "^2.1.1",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
+    "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.14",
     "broccoli-asset-rev": "^3.0.0",
     "concurrently": "^8.0.1",
