--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,5 +2,6 @@
   "compilerOptions" : {
     "experimentalDecorators" : true,
     "target": "es2015",
-  }
+  },
+  "exclude": ["node_module", "dist"]
 }
