--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "loader.js": "^4.7.0",
     "postcss": "^8.4.24",
     "postcss-loader": "^7.3.3",
+    "postcss-nesting": "^12.0.0",
     "prettier": "^2.8.7",
     "qunit": "^2.19.4",
     "qunit-dom": "^2.0.0",
